# winit-next

./: Cargo.toml  README.md  rustc-ice-2024-01-06T04_35_33-1485.txt  rustc-ice-2024-01-06T04_35_33-1489.txt  rustc-ice-2024-01-06T04_35_36-1519.txt  rustc-ice-2024-01-06T04_35_36-1520.txt  rustc-ice-2024-01-06T04_35_38-1539.txt  rustc-ice-2024-01-06T04_35_38-1540.txt  rustfmt.toml
ci/: build_docker_images.sh  test.sh  tests_android.json  tests_linux.json
crates/testing/keter-test/: Cargo.toml  README.md
crates/testing/keter-test-runner/: Cargo.toml  README.md
crates/testing/keter-test-runner/src/: lib.rs  main.rs  runner.rs
crates/testing/keter-test-runner/src/runner/: command.rs  functionality.rs  mod.rs  style.rs  tests.rs  util.rs
crates/testing/keter-test-runner/src/runner/environment/: android.rs  choose.rs  docker.rs  host.rs  mod.rs
crates/testing/keter-test/src/: lib.rs
crates/testing/keter-test/src/reporter/: console.rs  dump.rs  mod.rs  tcp.rs  writer.rs
dockerfiles/: Dockerfile.ubuntu
winit/: Cargo.toml
winit-core/: Cargo.toml
winit-core/src/: application.rs  event_loop.rs  lib.rs  monitor.rs  window.rs
winit-core/src/event_loop/: mod.rs  proxy.rs
winit-core/src/input/: mod.rs  touch.rs
winit-core/winit_tests/hello_world/src/: lib.rs
winit-examples/: Cargo.toml
winit-test/: Cargo.toml  README.md
winit-test-runner/: Cargo.toml  README.md
winit-test-runner/src/: main.rs
winit-test-runner/src/runner/: mod.rs  tests.rs  util.rs
winit-test-runner/src/runner/environment/: android.rs  choose.rs  docker.rs  host.rs  mod.rs
winit-test/src/: lib.rs
winit-test/src/reporter/: console.rs  dump.rs  mod.rs  writer.rs
winit-wayland/: Cargo.toml
winit-wayland/examples/: window.rs
winit-wayland/src/: event_loop.rs  lib.rs  monitor.rs  state.rs  window.rs
