[package]
name = "winit-test-runner"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]
publish = false

[dependencies]
async-channel = "2.1.1"
async-executor = "1.8.0"
async-fs = "2.1.0"
async-io = "2.2.2"
async-lock = "3.2.0"
async-process = "2.0.1"
blocking = "1.5.1"
clap = "4.4.11"
color-eyre = "0.6.2"
eyre = "0.6.11"
futures-lite = "2.1.0"
human-panic = "1.2.2"
ignore = "0.4.21"
winit-test.workspace = true
once_cell = "1.19.0"
owo-colors = "4.0.0"
pin-project-lite = "0.2.13"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.40", default-features = false, features = ["async-await"] }
tracing-subscriber = "0.3.18"
which = "5.0.0"
