[package]
name = "winit-wayland"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = [ "sctk-adwaita" ]

[dependencies]
winit-core = { path = "../winit-core" }

calloop = "0.12.3"
sctk = { package = "smithay-client-toolkit", version = "0.18.0", default-features = false, features = ["calloop"] }
sctk-adwaita = { version = "0.8.0", default_features = false, optional = true }
wayland-backend = { version = "0.3.0", default_features = false, features = ["client_system"] }
wayland-client = { version = "0.31.1" }
wayland-protocols = { version = "0.31.0", features = [ "staging"] }
wayland-protocols-plasma = { version = "0.2.0", features = [ "client" ] }
raw-window-handle = "0.6.0"
raw-window-handle-05 = { package = "raw-window-handle", version = "0.5.2" }
log = "0.4.20"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dev-dependencies]
softbuffer = { version = "0.3.0", default-features = false, features = [ "wayland" ] }
