[package]
name = "keter-test"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]

[dependencies]
async-channel = "2.1.1"
async-executor = "1.8.0"
async-io = "2.2.2"
async-lock = "3.2.0"
async-net = "2.0.0"
blocking = "1.5.1"
color-eyre = "0.6.2"
futures-lite = "2.1.0"
human-panic = "1.2.2"
inventory = "0.3.14"
owo-colors = "4.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = "0.3.18"
web-time = "0.2.3"
